# iskrauraltell-challenge

./: ArticleStorage.cpp  CMakeLists.txt  QueryProcessor.cpp  README.html  README.md  Utilities.cpp  iskrauraltel-challenge.cpp  iskrauraltel-test.cpp
include/: ArticleStorage.h  Constants.h  DirChangesNotifier.hpp  QueryProcessor.h  Utilities.h
